Fix letter input on IE

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -519,4 +519,9 @@ input[type="text"].letters-input {
   .bag-color {
     text-align: center;
   }
+
+  input[type="text"].letters-input {
+    height: auto;
+    min-height: 100%;
+  }
 }
